--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* base rules */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,65 +10,374 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #6e768f;
+    color: #a5abc5;
     background-color: #eceef4;
     font-family: "Proxima Nova", "Georgia", sans-serif;
-    font-size: 14px;
+    font-size: 13px;
 }
 
-.page-header {
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3vh 0;
-
-    border: 1px dashed black;
+h2,
+h3 {
+    color: #6e768f;
+    font-weight: normal;
 }
-
-/*
 
 a {
     text-decoration: none;
-    color: #6e768f;
+    color: #a5abc5;
 }
 
-.back, .sign-in {
+i.fas,
+i.far,
+i.fab  {
+    padding-right: 10px;
+}
+
+
+/* buttons (or looks like buttons) */
+
+.btn {
+    width: 160px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #a5abc5;
     border: 1px solid #c9d0e1;
     border-radius: 3px;
-    padding: 18px 40px;
-    font-size: 12px;
-	font-weight: bold;
+    font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
 
-.fa-long-arrow-alt-left, .fa-user {
-	margin: 0 10px 0 0;
+.btn:hover {
+    color: #76a7e1;
+    border: 2px solid #76a7e1;
 }
 
-main {
-    background-color: #ffffff;
-    margin: 0 150px;
+.btn:hover a {
+    color: #76a7e1;
+}
+
+
+/* custom radio buttons */
+
+input[type="radio"] {
+    display: none;
+}
+
+.select-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #f7f7fa;
+    border: 1px solid #c9d0e1;
+    border-radius: 3px;
+    font-size: 14px;
+}   
+
+input[type="radio"]:checked + .select-wrapper {
+	border: 3px solid #76a7e1;
+    border-radius: 3px;
+}
+
+input[type="radio"]:checked + .select-wrapper::after {
+	font-family: "Font Awesome\ 5 Free";
+	content: "\f058";
+	position: absolute;
+	top: -10px;
+    right: -10px;
+    z-index: 2;
+	color: #76a7e1;
+    background-color: #fff;
+    border-radius: 100%;
+    font-size: 24px;
+}
+
+
+/* HEADER */
+
+.page-header {
+    width: 80%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 50px 0;
+}
+
+.btn-back {
+    order: -1;
+}
+
+.btn-sign-in {
+    order: 1;
+}
+
+
+/* MAIN */
+
+.page-main {
+    width: 80%;
+    max-width: 1200px;
+    background-color: #fff;
     border: 1px solid #c9d0e1;
     border-radius: 3px;
 }
 
+
+/* ORDER-HEADER SECTION */
+
 .order-header {
+    height: 160px;
+    border-bottom: 1px solid #c9d0e1;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.order-header .order-summary {
+    flex-grow: 1;
+    align-self: center;
+}
+
+.order-header .order-summary table {
+    width: 87%;
+    margin-left: 13%;
+    text-align: left;
+}
+
+.order-header .order-summary table caption {
+    position: relative;
+    padding-bottom: 30px;
+    text-align: left;
+    color: #6e768f;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.order-header .order-summary table caption i {
+    position: absolute;
+    left: -30px;
+    top: -5px;
+    font-size: 20px;
+}
+
+.order-header .order-summary table tr {
+    height: 20px;
+}
+
+.order-header .order-summary table th {
+    width: 25%;
+    color: #6e768f;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.order-header .order-btn {
+    padding: 10px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border-right: 1px solid #c9d0e1;
+}
+
+.order-header .order-btn button[type="submit"] {
+    color: #fff;
+    background-color: #5fcac6;
+    border-color: #54aca9;
+} 
+
+.order-header .order-btn button[type="submit"]:hover {
+    color: #76a7e1;
+    background-color: #fff;
+    border: 2px solid #76a7e1;
+} 
+
+.order-header .order-btn button[type="button"] {
+    background-color: #f7f7fa;
+} 
+
+.order-header .help {
+    max-width: 360px;
+    padding-left: 50px;
+    padding-right: 40px;
+    align-self: center;
+}
+
+.order-header .help h3 {
+    position: relative;
+    padding-bottom: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.order-header .help h3 i {
+    position: absolute;
+    left: -30px;
+    top: -3px;
+    font-size: 20px;
+}
+
+.order-header .help p {
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.order-header .help address a {
+    display: inline-block;
+    padding: 15px 15px 0 0;
+    color: #6e768f;
+    font-style: normal;
+}
+
+.order-header .help address a:hover {
+    text-decoration: underline;
+}
+
+
+/* DOCUMENT-TYPE-SELECT SECTION */
+
+.document-type-select {
+    height: 500px;
+    padding: 50px 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.document-type-select h2 {
+    text-align: center;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.document-type-select h2 span {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #a5abc5;
+}
+
+.document-type-select .radio-row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.order-summary {
-    flex-grow: 2;
+.document-type-select .select-wrapper {
+    width: 290px;
+    height: 200px;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
-.help {
-    flex-grow: 1;
+.document-type-select .select-wrapper img {
+    order: -1;
 }
 
-footer {
-    margin: 0 150px;
+
+/* FILE-UPLOAD SECTION */
+
+.file-upload {
+    height: 400px;
+    padding: 0 10% 50px 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
-*/
+
+.file-upload h2 {
+    font-size: 20px;
+}
+
+.file-upload h2 span {
+    padding-left: 5px;
+    color: #a5abc5;
+    font-size: 12px;
+}
+
+.file-upload .select-wrapper {
+    width: 230px;
+    height: 50px;
+}
+
+.file-upload .file-upload-table {
+    padding: 20px 40px;
+    border: 1px solid #e6e8ee;
+}
+
+.file-upload table {
+    width: 100%;
+    text-align: left;
+}
+
+.file-upload table th {
+    padding: 10px 0;
+    text-transform: uppercase;
+}
+
+.file-upload table td {
+    padding: 10px 0;
+}
+
+.file-upload table tr th:last-child,
+.file-upload table tr td:last-child {
+    text-align: center;
+}
+
+
+/* LANGUAGE-SELECT SECTION */
+
+.language-select {
+    height: 300px;
+    padding: 0 10% 50px 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.language-select h2 {
+    font-size: 20px;
+}
+
+.language-select select {
+    width: 200px;
+    height: 50px;
+    margin: 0 10px;
+    position: relative;
+    color: #a5abc5;
+    background-color: #f7f7fa;
+    border: 1px solid #c9d0e1;
+    border-radius: 2px;
+    font-size: 14px;
+    text-align-last: center; 
+}
+
+.language-select label span{
+    display: inline-block;
+    width: 40px;
+    margin-right: 10px;
+    text-align: right;
+    text-transform: uppercase;
+}
+
+.res-language-select {
+    display: flex;
+    align-items: center;
+}
+
+.res-language-select .btn {
+    width: 120px;
+    margin-left: 15px;
+    background-color: #f7f7fa;
+}
+
