--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ i.fab  {
     padding-right: 10px;
 }
 
-
 /* buttons (or looks like buttons) */
 
 .btn {
@@ -53,11 +52,29 @@ i.fab  {
 .btn:hover {
     color: #76a7e1;
     border: 2px solid #76a7e1;
+    cursor: pointer;
 }
 
 .btn:hover a {
     color: #76a7e1;
 }
+
+.order-btn {
+    color: #fff;
+    background-color: #5fcac6;
+    border-color: #54aca9;
+} 
+
+.order-btn:hover {
+    color: #76a7e1;
+    background-color: #fff;
+    border: 2px solid #76a7e1;
+    cursor: pointer;
+} 
+
+.print-btn {
+    background-color: #f7f7fa;
+} 
 
 
 /* custom radio buttons */
@@ -75,6 +92,7 @@ input[type="radio"] {
     border: 1px solid #c9d0e1;
     border-radius: 3px;
     font-size: 14px;
+    color: #9098b8;
 }   
 
 input[type="radio"]:checked + .select-wrapper {
@@ -93,6 +111,63 @@ input[type="radio"]:checked + .select-wrapper::after {
     background-color: #fff;
     border-radius: 100%;
     font-size: 24px;
+}
+
+
+/* custom range */
+
+input[type="range"] {
+    -webkit-appearance: none;
+    width: 85%;
+    margin: 6px auto;
+    position: relative;
+  }
+
+input[type="range"]:focus {
+    outline: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 85%;
+    height: 10px;
+    cursor: pointer;
+    background: #eff0f5;
+    border-radius: 25px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    height: 22px;
+    width: 22px;
+    border-radius: 22px;
+    background: #edbe76;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -6px;
+    position: relative;
+    z-index: 2;
+}
+
+input[type="range"]::before {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    z-index: 1;
+    border-radius: 10px;
+    background: #d6d8e2;
+}
+
+input[type="range"]::after {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    border-radius: 10px;
+    background: #d6d8e2;
 }
 
 
@@ -178,7 +253,7 @@ input[type="radio"]:checked + .select-wrapper::after {
     letter-spacing: 1px;
 }
 
-.order-header .order-btn {
+.order-header .btn-wrapper {
     padding: 10px 40px;
     display: flex;
     flex-direction: column;
@@ -186,22 +261,6 @@ input[type="radio"]:checked + .select-wrapper::after {
     align-items: center;
     border-right: 1px solid #c9d0e1;
 }
-
-.order-header .order-btn button[type="submit"] {
-    color: #fff;
-    background-color: #5fcac6;
-    border-color: #54aca9;
-} 
-
-.order-header .order-btn button[type="submit"]:hover {
-    color: #76a7e1;
-    background-color: #fff;
-    border: 2px solid #76a7e1;
-} 
-
-.order-header .order-btn button[type="button"] {
-    background-color: #f7f7fa;
-} 
 
 .order-header .help {
     max-width: 360px;
@@ -289,7 +348,7 @@ input[type="radio"]:checked + .select-wrapper::after {
 
 .file-upload {
     height: 400px;
-    padding: 0 10% 50px 10%;
+    padding: 0 10% 70px 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -309,6 +368,9 @@ input[type="radio"]:checked + .select-wrapper::after {
     width: 230px;
     height: 50px;
 }
+.file-upload .select-wrapper i {
+    font-size: 16px;
+}
 
 .file-upload .file-upload-table {
     padding: 20px 40px;
@@ -323,6 +385,7 @@ input[type="radio"]:checked + .select-wrapper::after {
 .file-upload table th {
     padding: 10px 0;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .file-upload table td {
@@ -339,7 +402,7 @@ input[type="radio"]:checked + .select-wrapper::after {
 
 .language-select {
     height: 300px;
-    padding: 0 10% 50px 10%;
+    padding: 0 10% 70px 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -368,8 +431,10 @@ input[type="radio"]:checked + .select-wrapper::after {
     margin-right: 10px;
     text-align: right;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
+.src-language-select,
 .res-language-select {
     display: flex;
     align-items: center;
@@ -380,4 +445,214 @@ input[type="radio"]:checked + .select-wrapper::after {
     margin-left: 15px;
     background-color: #f7f7fa;
 }
+
+
+/* TWO-SECTIONS-CONTAINER */
+
+.two-sections-container {
+    height: 370px;
+    padding: 0 10% 50px 10%;
+    display: flex;
+}
+
+.tone-select {
+    flex-grow: 1;
+}
+
+.time-select {
+    width: 500px;
+}
+
+
+/* TONE-SELECT SECTION */
+
+.tone-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.tone-select h2 {
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
+.tone-select .container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.tone-select .select-wrapper {
+    width: 230px;
+    height: 60px;
+}
+
+.tone-select .select-wrapper i {
+    font-size: 16px;
+}
+
+
+/* TIME-SELECT SECTION*/
+
+.time-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.time-select h2 {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+.time-select .range-labels {
+    list-style: none;
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.time-select .range-labels .selected {
+    color: #edbe76;
+}
+
+.time-select .timeline-info {
+    padding: 30px 30px 30px 60px;
+    border: 1px solid #e6e8ee;
+    line-height: 1.5;
+}
+
+.time-select .timeline-info h4 {
+    color: #727895;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.time-select .timeline-info strong {
+    color: #edbe76;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.time-select .timeline-info i {
+    position: absolute;
+    left: -30px;
+    font-size: 20px;
+}
+
+
+/* PAYMENT-SELECT SECTION */
+
+.payment-select {
+    height: 750px;
+    padding: 0 10% 40px 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.payment-select h2 {
+    font-size: 20px;
+}
+
+.payment-select p a {
+    text-decoration: underline;
+}
+
+.payment-select label {
+    padding-left: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.payment-select .wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.payment-select .container {
+    display: flex;
+    flex-direction: column;
+}
+
+.payment-select .payment-radio-wrapper {
+    display: flex;
+    flex-direction: row;
+    margin: 30px 0;
+}
+
+.payment-select input[type="text"],
+.payment-select input[type="email"],
+.payment-select input[type="password"] {
+    margin-top: 10px;
+    height: 50px;
+    border: 1px solid #c9d0e1;
+    border-radius: 3px;
+    color: #5a607a;
+    font-size: 12px;
+    letter-spacing: 1px;
+    padding-left: 15px;
+    margin-right: 30px;
+}
+
+.payment-select input[type="password"] {
+    font-size: 24px;
+    letter-spacing: 5px;
+}
+
+.payment-select .personal input[type="text"],
+.payment-select .personal input[type="email"],
+.payment-select .personal input[type="password"] {
+    width: 300px;
+}
+
+.payment-select .payment-method-radio .select-wrapper {
+    width: 220px;
+    height: 100px;
+    margin-right: 25px;
+}
+
+.payment-select input[name="card-number"] {
+    width: 380px;
+}
+
+.payment-select input[name="card-expiry-date"] {
+    width: 180px;
+}
+
+.payment-select input[name="verification-code"] {
+    width: 110px;
+}
+
+
+/* ORDER-FOOTER SECTION */
+
+.order-footer {
+    height: 150px;
+    padding: 0 10% 50px 10%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.order-footer .btn {
+    margin-left: 25px;
+}
+
+.order-footer label {
+    margin-left: 10px;
+    color: #6d8399;
+}
+
+.order-footer label a {
+    color: #6d8399;
+    text-decoration: underline;
+}
+
 
